--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "seed": "node database/seed.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
