--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "similar-options-service",
   "jest": {
     "moduleDirectories": [
-    "node_modules"
+      "node_modules"
     ]
   },
   "description": "> Project description",
@@ -15,7 +15,9 @@
     "start": "nodemon server/index.js",
     "seed": "node database/seed.js",
     "react-dev": "webpack -d --watch",
-    "test": "jest"
+    "test": "jest",
+    "restart": "pm2 startOrRestart ecosystem.config.js",
+    "deploy": "pm2 deploy ecosystem.config.js production"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -34,6 +36,7 @@
     "babel-loader": "^8.0.5",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
     "jest": "^24.1.0",
+    "pm2": "^3.3.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
   },
