set up mongo db and connected

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "nodemon server/index.js",
-    "seed": "node database/seed.js",
+    "do-it": "node database/seed.js",
     "react-dev": "webpack -d --watch",
     "test": "jest",
     "restart": "pm2 startOrRestart ecosystem.config.js",
@@ -23,7 +23,10 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.10",
+    "fakegoose": "0.0.3",
+    "faker": "^4.1.0",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.16",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.9",
     "react": "^16.8.1",
@@ -37,7 +40,9 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "eslint": "^5.14.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
+    "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "jest": "^24.1.0",
     "pm2": "^3.3.1",
