--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "cluster": "^0.7.7",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "fakegoose": "0.0.3",
